[#6412][YW] Fix styling for Live Queries side panel SQL code and change theme.
Summary:
Currently Live Queries detailed view of SQL text is truncated, where we don't show the
entire text of query. This was likely caused by the change to highlighter.js where we removed the
react-highlight library. Add background and spacing to the SQL text and improve scroll behavior,
allowing user to see entire query. Change highlight.js code theme to a lighter one that makes the
text more visually appealing.

Test Plan:
Go to any universe with queries running. Open the Queries tab and observe the behavior of
the side panel.

Example of side panel open.
{F14570}
Example of side panel scrolled all the way down. The scrolling should not affect the rest of the page.
{F14571}

Reviewers: sshevchenko

Reviewed By: sshevchenko

Subscribers: ui

Differential Revision: https://phabricator.dev.yugabyte.com/D10012

--- a/managed/ui/src/components/queries/LiveQueries.scss
+++ b/managed/ui/src/components/queries/LiveQueries.scss
@@ -191,6 +191,8 @@
     top: 0;
     right: 0;
     border-left: 1px solid $YB_BACKGROUND;
+    overflow: scroll;
+    max-height: 100%;
 
     &__header {
       margin-top: 119px;
@@ -206,7 +208,7 @@
       }
 
       .side-panel__title {
-        padding-top: 47px;
+        padding-top: 35px;
         color: $YB_ORANGE;
         border-bottom: 4px solid $YB_ORANGE;
         flex: 1 0 33%;
@@ -220,10 +222,20 @@
     &__content {
       padding: 15px 30px;
 
-      .side-panel__query code {
+      .side-panel__query {
         background: $YB_WHITE;
         overflow-y: auto;
-        max-height: 600px;
+        max-height: 400px;
+        width: 100%;
+        padding: 5px 10px;
+        border: 1px solid $YB_GRAY_BORDER;
+        border-radius: 7px;
+        
+        pre {
+          white-space: pre-wrap;       /* Since CSS 2.1 */
+          white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+          word-wrap: break-word;       /* Internet Explorer 5.5+ */
+        }
       }
 
       .side-panel__details {
